--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -4,7 +4,7 @@
 	text-align: center;
 	align-content: center;
 	width: 100%;
-
+	z-index: 2;
 
 	h1 {
 		font-size: 24px;
