--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -10,7 +10,7 @@
 .menu {
 	@extend %listreset;
 	position: absolute;
-	z-index: 3;
+	z-index: 100;
 	top: 100%;
 	left: 0;
 	right: 0;
