--- a/scss/layout/_common.scss
+++ b/scss/layout/_common.scss
@@ -1,7 +1,6 @@
 .wrapper {
 	overflow: hidden;
 	position: relative;
-	z-index: 1;
 }
 
 .container {
@@ -13,6 +12,10 @@
 
 
 .intro {
+	position: relative;
+	padding: 40px 0 0 0;
+	z-index: 1;
+
 	&::before {
 		content: "";
 		position: absolute;
@@ -21,18 +24,21 @@
 		right: 0;
 		bottom: 0;
 		background: linear-gradient(to bottom, #09052f 0%, #311d5e 100%);
+		pointer-events: none;
 		opacity: 0.8;
 		z-index: 1;
 	}
 }
 
 .intro-slider {
-	z-index: 2;
+	min-height: 70vh;
+	padding-bottom: 20px;
+	z-index: 3;
 
 	.slick-dots {
 		position: absolute;
 		list-style: none;
-		bottom: 25px;
+		bottom: 75px;
 		left: 50%;
 		transform: translateX(-50%);
 		padding: 0;
@@ -49,15 +55,13 @@
 				width: 10px;
 				height: 10px;
 				padding: 5px;
-				border: 2px solid #c2c2c2;
+				border: 1px solid #c2c2c2;
 				border-radius: 50%;
 				transition: background-color .2s linear;
 
 				&:hover {
-					background: darken($green, 5%);
+					background: darken($green, 10%);
 				}
-
-
 			}
 		}
 
@@ -69,3 +73,26 @@
 	}
 }
 
+.story {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 40px 0;
+
+	img {
+		margin-bottom: 20px;
+	}
+
+	h2 {
+		margin-bottom: 20px;
+		color: #413d4b;
+	}
+
+	p {
+		margin-bottom: 20px;
+	}
+
+	.btn {
+		width: 100%;
+	}
+}
