--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,6 @@
 .header {
 	position: absolute;
 	width: 100%;
-
 }
 
 .header-holder {
@@ -19,6 +18,7 @@
 
 .logo {
 	z-index: 3;
+	padding: 5px;
 	width: 100px;
 	@include media('>=tablet') {
 		width: 128px;
